<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme"
        android:background="#4cae50"
        android:padding="8dp"
        >
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/logo_icon"
            android:layout_margin="2dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_setting"
            android:textColor="@color/White"
            android:textSize="20sp"
            android:layout_marginStart="22dp"
            android:layout_marginLeft="22dp"
            android:textStyle="bold"/>
        <Button
            android:id="@+id/out"
            android:textAllCaps="false"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="115dp"
            android:background="@drawable/logout1"
            />
    </android.support.v7.widget.Toolbar>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_setting"
        android:padding="10dp"
        android:layout_marginTop="22dp"/>
    <CheckBox
        android:id="@+id/mybox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/receive_notification"
        android:padding="10dp"
        android:gravity="left"
        android:textSize="15sp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="left"
        android:background="@drawable/frame"
        android:padding="10dp"
        android:layout_margin="10dp">

        <View
            android:layout_width="match_parent"
            android:gravity="left"
            android:layout_height="1dp">

        </View>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left"
            android:text="@string/monitoring_duration"
            />
        <RadioGroup
            android:layout_width="wrap_content"
            android:gravity="left"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/daily"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/daily"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                />

            <RadioButton
                android:id="@+id/weekly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weekly"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"/>

            <RadioButton
                android:id="@+id/monthly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monthly"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp" />


        </RadioGroup>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
       android:layout_gravity="bottom"
        android:gravity="bottom">
    <Button
        android:id="@+id/upstting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:text="@string/update"
        android:textAllCaps="false"
        android:background="@drawable/button_next"
        android:textColor="@color/White"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="150dp"/>
        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="KSU-IT@2018"
            android:layout_gravity="bottom"
            android:textColor="@color/White"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:gravity="center"
            android:layout_marginTop="50dp"
            android:background="@color/legacy_primary"/>
</LinearLayout>


</LinearLayout>